Fix missing padding in reply and edit body views

--- a/browser/src/app/core/component/dumb/compose.css
+++ b/browser/src/app/core/component/dumb/compose.css
@@ -1,3 +1,7 @@
+.compose {
+        padding: 0 0.25rem;
+}
+
 .compose-draft-body {
         color: var(--light-font-colour);
         max-width: 700px;
